syntax = "proto3";

package pb;

import "order.proto";

option go_package = "github.com/huzaifa678/Crypto-currency-web-app-project/pb";


message UpdateOrderStatusAndFilledAmountRequest {
    string order_id = 1;
    Status order_status = 2;
    int64 filled_amount = 3;
}

message UpdateOrderStatusAndFilledAmountResponse {
    string success = 1;
}